GDS Challenge 26 waring fixes